--- a/src/pages/home/article/article.html
+++ b/src/pages/home/article/article.html
@@ -17,7 +17,7 @@
     <div class="dataWrap">
         <div style="float: left;">
             <img src="assets/img/fire.png" class="fireImg">
-            <span class="fireText">22</span>
+            <span class="fireText">{{articleInfo.score}}</span>
         </div>
         <div style="float: right;">
             <img src="assets/img/likehome.png" class="collectImg">
