--- a/src/pages/home/diary/diary.html
+++ b/src/pages/home/diary/diary.html
@@ -14,7 +14,7 @@
     <div class="dataWrap">
         <div style="float: left;">
             <img src="assets/img/fire.png" class="fireImg">
-            <span class="fireText">22</span>
+            <span class="fireText">{{diaryInfo.score}}</span>
         </div>
         <div style="float: right;">
             <img src="assets/img/likehome.png" class="collectImg">
