--- a/src/pages/videodetail/videodetail.html
+++ b/src/pages/videodetail/videodetail.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar>
         <ion-title>视频详情页</ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only>
+                <img src="assets/img/likehome.png">
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content padding>
@@ -10,22 +15,22 @@
         <span style="display: inline-block;font-size: 13px;color: #E99C9E;border: 1px solid #E99C9E;padding: 1px 12px;border-radius: 3px;margin-right: 5px;margin-bottom: 5px;" *ngFor="let item of info.tags">{{item.name}}</span>
     </div>
     <div style="overflow: hidden;margin-top: 15px;margin-bottom: 15px;">
-        <img [src]="user.avatar" style="width: 35px;height: 35px;border-radius: 50%;float: left;">
+        <img [src]="user.avatar" style="width: 35px;height: 35px;border-radius: 50%;float: left;" (click)="goMe(info.user.id)">
         <div style="float: left;margin-left: 10px;">
-            <p style="font-size: 14px;color: #898989;margin: 0;">{{user.username}}</p>
+            <p style="font-size: 14px;color: #898989;margin: 0;" (click)="goMe(info.user.id)">{{user.username}}</p>
             <p style="font-size: 13px;color: #C4C4C4;margin: 0;">{{info.updated_at | timeFormat1 }}</p>
         </div>
-        <span style="float: right;display: inline-block;font-size: 14px;color: #E99C9E;border: 1px solid #E99C9E;padding: 3px 11px;margin-top: 5px;border-radius: 3px;">+ 关注</span>
+        <span style="float: right;display: inline-block;font-size: 14px;color: #E99C9E;border: 1px solid #E99C9E;padding: 3px 11px;margin-top: 5px;border-radius: 3px;" *ngIf="!isAttention" (click)="goAttention()">+ 关注</span>
+        <span style="float: right;display: inline-block;font-size: 14px;color: #fff;border: 1px solid #E99C9E;padding: 3px 11px;margin-top: 5px;border-radius: 3px;background-color: #E99C9E;" *ngIf="isAttention" (click)="concelAttention()">已关注</span>
     </div>
     <video [src]="info.video" style="width: 100%;" controls="controls"></video>
     <p style="font-size: 14px;color: #737373;">
-            http://doclever.cn/controller/share/share.html#5acf04a0d52abd5e98747619 
+        http://doclever.cn/controller/share/share.html#5acf04a0d52abd5e98747619
     </p>
     <detailComment type="vlog" [id]="globalId" *ngIf="globalId"></detailComment>
     <div style="height: 55px;width: 100%;"></div>
     <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
-        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;"
-            (click)="makeComment()">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
             <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
             <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
         </div>
