--- a/src/pages/home/video/homevideo.html
+++ b/src/pages/home/video/homevideo.html
@@ -7,11 +7,11 @@
         <span class="time">{{videoInfo.created_at | timeFormat1}}</span>
     </div>
     <!-- <video src="assets/1.mp4" controls="controls" style="width: 100%;" (click)="goDetail()"></video> -->
-    <img [src]="videoInfo.image_set[0]" style="width: 100%;" (click)="goDetail()">
+    <span style="display: inline-block;width: 100%;height: 210px;background-position: center;background-size: cover;" [ngStyle]="{'background-image': 'url(' + videoInfo.image_set[0] + ')'}" (click)="goDetail()"></span>
     <div class="dataWrap">
         <div style="float: left;">
             <img src="assets/img/fire.png" class="fireImg">
-            <span class="fireText">22</span>
+            <span class="fireText">{{videoInfo.score}}</span>
         </div>
         <div style="float: right;">
             <img src="assets/img/likehome.png" class="collectImg">
