--- a/src/pages/topic/longArticle/longArticle.html
+++ b/src/pages/topic/longArticle/longArticle.html
@@ -1,44 +1,44 @@
 <ion-content style="background: #F8F8F8;">
-    <p style="font-size: 12px;color: #C6C6C6;margin: 0;margin-top: 10px;margin-bottom: 10px;margin-left: 16px;">129篇长文</p>
-    <div style="background: #fff;margin-bottom: 10px;">
+    <p style="font-size: 12px;color: #C6C6C6;margin: 0;margin-top: 10px;margin-bottom: 10px;margin-left: 16px;">{{count}}篇长文</p>
+    <div style="background: #fff;margin-bottom: 10px;" *ngFor="let item of articleList">
         <ion-grid style="overflow: hidden;padding-left: 16px;padding-right: 16px;padding-top: 10px;">
             <ion-row justify-content-between align-items-end>
                 <ion-col col-6>
                     <div>
-                        <img src="assets/img/guide1.jpg" style="width: 35px;height: 35px;border-radius: 50%;overflow: hidden;vertical-align: middle;">
-                        <span style="font-size: 14px;color: #A3A3A3;margin-left: 10px;">做个好学生</span>
+                        <img [src]="item.avatar" style="width: 35px;height: 35px;border-radius: 50%;overflow: hidden;vertical-align: middle;">
+                        <span style="font-size: 14px;color: #A3A3A3;margin-left: 10px;">{{item.username}}</span>
                     </div>
                     <p style="font-size: 15px;color: #9C9C9C;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;
-                            -webkit-box-orient: vertical;margin: 0;margin-top: 10px;margin-bottom: 6px;">标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题</p>
+                            -webkit-box-orient: vertical;margin: 0;margin-top: 10px;margin-bottom: 6px;">{{item.title}}</p>
                     <p style="font-size: 14px;color: #C1C1C1;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;
                 -webkit-box-orient: vertical;margin: 0;">正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文</p>
                 </ion-col>
                 <ion-col col-4>
-                    <img src="assets/img/guide1.jpg" style="width:100%;height: 80px;">
+                    <img [src]="item.image_set[0]" style="width:100%;height: 80px;">
                 </ion-col>
             </ion-row>
         </ion-grid>
         <div class="dataWrap">
             <div style="float: left;">
                 <img src="assets/img/fire.png" class="fireImg">
-                <span class="fireText">22</span>
+                <span class="fireText">{{item.score}}</span>
             </div>
             <div style="float: right;">
                 <img src="assets/img/likehome.png" class="collectImg">
-                <span class="collectText">10</span>
+                <span class="collectText">{{item.collect_count}}</span>
             </div>
             <div style="float: right;">
                 <img src="assets/img/commenthome.png" class="commentImg">
-                <span class="commentText">10</span>
+                <span class="commentText">{{item.comment_count}}</span>
             </div>
             <div style="float: right;">
                 <img src="assets/img/zanhome.png" class="zanImg">
-                <span class="zanText">10</span>
+                <span class="zanText">{{item.like_count}}</span>
             </div>
         </div>
     </div>
-    <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
         </ion-infinite-scroll-content>
-    </ion-infinite-scroll> -->
+    </ion-infinite-scroll>
 </ion-content>
