--- a/src/pages/topic/topicVideo/topicVideo.html
+++ b/src/pages/topic/topicVideo/topicVideo.html
@@ -1,9 +1,10 @@
 <ion-content style="background: #F8F8F8;padding-top: 15px;">
-    <div *ngFor="let item of videoList" style="margin-bottom: 10px;">
+    <p style="font-size: 12px;color: #C6C6C6;margin: 0;margin-top: 10px;margin-bottom: 10px;margin-left: 16px;">{{count}}个视频</p>
+    <div *ngFor="let item of videoList" style="margin-bottom: 10px;background: #fff;padding-top: 1px;">
         <homevideo [videoInfo]="item"></homevideo>
     </div>
-    <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
         </ion-infinite-scroll-content>
-    </ion-infinite-scroll> -->
+    </ion-infinite-scroll>
 </ion-content>
