--- a/src/pages/article-info/comment/detailComment.html
+++ b/src/pages/article-info/comment/detailComment.html
@@ -1,4 +1,5 @@
 <div class="acticle-reply" style="padding-bottom: 55px;">
+    <p style="font-size: 12px;color: #DFDFDF;margin: 0;">评论{{count}}</p>
     <div *ngFor="let item of commentInfo;index as i;" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
         <div class="reply-user">
             <div class="reply-head">
