--- a/src/pages/topic/topicBrief/topicBrief.html
+++ b/src/pages/topic/topicBrief/topicBrief.html
@@ -1,7 +1,7 @@
 <ion-content style="background: #F8F8F8;">
     <p style="font-size: 13px;color: #BABABA;margin: 0;padding-left: 16px;margin-top: 10px;margin-bottom: 10px;">话题简介</p>
     <p style="background: #fff;padding: 10px 16px;font-size: 14px;color: #8D8D8D;margin: 0;">
-        众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。众所周知，在 ES 6 之前没有类的概念，所以不能像 Java 中一个 extends 关键字就搞定了继承关系，需要一些 tricks 来实现，下面就介绍一些比较常用的方法。
+        {{topicInfo.content}}
     </p>
     <p style="font-size: 13px;color: #BABABA;margin: 0;padding-left: 16px;margin-bottom: 10px;margin-top: 10px;">活跃用户</p>
     <div style="background: #fff;">
