--- a/src/pages/article-info/article-info.html
+++ b/src/pages/article-info/article-info.html
@@ -4,107 +4,50 @@
         <ion-title>
             {{title}}
         </ion-title>
-        <ion-buttons end style="margin-right: 10px;">
-            <button ion-button clear (click)="collection()">
-                <ion-icon name="star" class="star1" *ngIf="hasCollected"></ion-icon>
-                <ion-icon name="star-outline" class="star" *ngIf="!hasCollected"></ion-icon>
+        <ion-buttons end *ngIf="!hasCollected" (click)="makecollect()">
+            <button ion-button icon-only>
+                <img src="assets/img/likehome.png" style="width: 28px;margin-right: 10px;">
             </button>
         </ion-buttons>
-        <!-- <ion-buttons end style="margin-right:15px;">
-            <button ion-button clear (click)="like()">
-                <ion-icon name="heart-outline" class="sc" *ngIf="!hasZan"></ion-icon>
-                <ion-icon name="heart" class="sc1" *ngIf="hasZan"></ion-icon>
+        <ion-buttons end *ngIf="hasCollected" (click)="cancelcollect()">
+            <button ion-button icon-only>
+                <img src="assets/img/likehomeselected.png" style="width: 28px;margin-right: 10px;">
             </button>
-        </ion-buttons> -->
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
-<ion-content>
-    <div>
-        <img style="width:100%;" [src]="info.imgurl">
-    </div>
-    <div class="acticle-scroll">
-        <p class="scroll-text" [innerHTML]="info.text | safeHtml">
-    </div>
-    <detailComment type="blog" [id]="globalId" *ngIf="globalId"></detailComment>
-    <div style="height: 55px;width: 100%;"></div>
-    <!-- <div class="acticle-reply" style="padding-bottom: 55px;">
-        <div *ngFor="let item of user;index as i;" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
-            <div class="reply-user">
-                <div class="reply-head">
-                    <div class="reply-head-img">
-                        <img src="{{item.userImg}}" (click)="goMe(item.userId)">
-                    </div>
-                    <div class="reply-info">
-                        <div (click)="goMe(item.userId)" class="name">{{item.userName}}</div>
-                        <p class="time">{{item.time}}</p>
-                    </div>
-                    <p class="friend">好友</p>
-                </div>
+<ion-content style="background: #F8F8F8;">
+    <div style="background: #fff;padding:16px;">
+        <p style="font-size: 16px;color: #6F6F6F;margin: 0;margin-top: 10px;">{{info.title}}</p>
+        <p style="font-size: 12px;color: #D88F96;margin: 0;margin-top: 5px;">文章</p>
+        <div style="overflow: hidden;margin-top: 15px;margin-bottom: 10px;">
+            <img [src]="user.avatar" style="width: 35px;height: 35px;border-radius: 50%;float: left;" (click)="goMe(user.id)">
+            <div style="float: left;margin-left: 10px;">
+                <p style="font-size: 14px;color: #898989;margin: 0;" (click)="goMe(user.id)">{{user.username}}</p>
+                <p style="font-size: 13px;color: #C4C4C4;margin: 0;">{{info.updated_at | timeFormat1 }}</p>
             </div>
-            <div style="position: relative;padding-left: 46px;">
-                <p (click)="commentDetail(item.id)" class="replycontent">{{item.reply}}</p>
-                <div class="mainimg">
-                    <ss-comment-attachments *ngIf="item.plimg.length" [attachments]="item.plimg" [bigImage]="true" style="width: 100%;"></ss-comment-attachments>
-                </div>
-                <div class="commentWrap">
-                    <img src="assets/img/comment1.png" class="commentImg" (click)="addComment(i,item.id)">
-                    <img src="assets/img/zan.png" class="zanImg" (click)="commentZan(item.id)" *ngIf="!item.commentZan">
-                    <img src="assets/img/zan1.png" class="zanImg" *ngIf="item.commentZan">
-                    <span class="zanNum">{{item.zan}}</span>
-                </div>
-            </div>
-            <div *ngFor="let addzan of item.addZan" style="margin-left:45px;padding-top:10px;border-top:1px solid rgb(236, 234, 234);">
-                <div class="reply-user" style="margin-top: 5px;">
-                    <div class="reply-head">
-                        <div class="reply-head-img" style="width: 35px;height: 35px;">
-                            <img src="{{addzan.user.avatar}}" (click)="goMe(addzan.user.id)">
-                        </div>
-                        <div class="reply-info">
-                            <div (click)="goMe(addzan.user.id)" class="name">{{addzan.user.username}}</div>
-                            <p class="time">{{addzan.time}}</p>
-                        </div>
-                    </div>
-                </div>
-                <div style="position: relative;">
-                    <p class="replycontent">{{addzan.content}}</p>
-                    <div class="mainimg">
-                        <div *ngFor="let img of addzan.img" class="imgdiv">
-                            <img [src]="img">
-                        </div>
-                    </div>
-                    <div class="commentWrap">
-                        <img src="assets/img/zan1.png" class="zanImg" *ngIf="addzan.commentZan">
-                        <img src="assets/img/zan.png" class="zanImg" *ngIf="!addzan.commentZan" (click)="addCommentZan(i,addzan.id)">
-                        <span class="zanNum">{{addzan.like_count}}</span>
-                    </div>
-                </div>
-            </div>
-            <div style="margin-left:45px;border-top:1px solid rgb(236, 234, 234);" *ngIf="item.addZanAction">
-                <div style="overflow: hidden;margin-top: 10px;">
-                    <div class="reply-head-img" style="width: 40px;height: 40px;float: left;">
-                        <img src="assets/img/guide1.jpg">
-                    </div>
-                    <ion-textarea placeholder="Enter a description" [(ngModel)]="item.addZanContent" style="border: 1px solid rgb(236, 234, 234);border-radius: 3px;float: right;width: 80%;"></ion-textarea>
-                </div>
-                <div style="overflow: hidden;">
-                    <p style="font-size: 14px;color: #fff;background-color:#EF7A7A;width: 40px;height: 25px;line-height: 25px;text-align: center;float: right;border-radius: 3px;" (click)="submitAddZan(i,item.id)">发布</p>
-                </div>
-            </div>
+            <span style="float: right;display: inline-block;font-size: 14px;color: #E99C9E;border: 1px solid #E99C9E;padding: 3px 11px;margin-top: 5px;border-radius: 3px;" *ngIf="!isAttention" (click)="goAttention()">+ 关注</span>
+            <span style="float: right;display: inline-block;font-size: 14px;color: #fff;border: 1px solid #E99C9E;padding: 3px 11px;margin-top: 5px;border-radius: 3px;background-color: #E99C9E;" *ngIf="isAttention" (click)="concelAttention()">已关注</span>
         </div>
-        <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-            <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
-            </ion-infinite-scroll-content>
-        </ion-infinite-scroll>
-    </div> -->
+        <div>
+            <img style="width:100%;" [src]="info.imgurl">
+        </div>
+        <div class="acticle-scroll">
+            <p class="scroll-text" [innerHTML]="info.text | safeHtml">
+        </div>
+    </div>
+    <div style="background: #fff;margin-top: 10px;">
+        <detailComment type="blog" [id]="globalId" *ngIf="globalId"></detailComment>
+    </div>
+    <div style="height: 55px;width: 100%;"></div>
     <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
-        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;"
-            (click)="makeComment()">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
             <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
             <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
         </div>
         <div style="float:right;width: 50%;display: inline-block;line-height: 30px;text-align: center;">
             <img src="assets/img/zan.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="!hasZan" (click)="like()">
-            <img src="assets/img/zan1.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="hasZan">
+            <img src="assets/img/zan1.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="hasZan" (click)="cancelLike()">
             <span style="font-size: 14px;color: #9F9F9F;vertical-align: middle;margin-left: 5px;">赞</span>
         </div>
     </div>
