--- a/src/pages/hotlist/peoplehotlist/peoplehotlist.html
+++ b/src/pages/hotlist/peoplehotlist/peoplehotlist.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <div style="overflow: hidden;padding-left: 15px;padding-right: 15px;margin-top: 15px;border-bottom:1px solid #F2F2F2;padding-bottom: 15px;" *ngFor="let item of peopleList;index as i">
+    <div style="overflow: hidden;padding-left: 15px;padding-right: 15px;margin-top: 15px;border-bottom:1px solid #F2F2F2;padding-bottom: 15px;" *ngFor="let item of peopleList;index as i" (click)="goMe(item.id)">
         <span style="font-size: 12px;color: #F08585;display: inline-block;border-radius: 50%;text-align: center;float: left;border: 1px solid #F08585;margin-top: 12px;margin-right: 10px;width: 20px;height: 20px;line-height: 18px;">{{i+1}}</span>
         <div style="width: 40px;height: 40px;border-radius: 50%;overflow: hidden;float: left;">
             <img [src]="item.avatar" style="width: 40px;height: 40px;">
