--- a/src/pages/record-info/record-info.html
+++ b/src/pages/record-info/record-info.html
@@ -1,11 +1,19 @@
 <ion-header>
     <ion-navbar>
         <ion-title>日记详情</ion-title>
+        <ion-buttons end *ngIf="!hasCollected" (click)="makecollect()">
+            <button ion-button icon-only>
+                <img src="assets/img/likehome.png" style="width: 28px;margin-right: 10px;">
+            </button>
+        </ion-buttons>
+        <ion-buttons end *ngIf="hasCollected" (click)="cancelcollect()">
+            <button ion-button icon-only>
+                <img src="assets/img/likehomeselected.png" style="width: 28px;margin-right: 10px;">
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
-
-
-<ion-content (pan)="test($event)">
+<ion-content>
     <ion-slides style="height:auto;" pager="true">
         <ion-slide *ngFor="let item of info.image_set">
             <img style='width:100%;' [src]="item.image">
@@ -16,12 +24,12 @@
             <p style="font-size: 12px;color: #F6AFAF;margin:0;margin-top: 5px;margin-bottom: 5px;">日记</p>
             <div style="color: #717171;font-size: 15px;">{{info.title}}</div>
             <div style="overflow: hidden;margin-top:10px;margin-bottom:10px;">
-                <div style="width: 35px;height: 35px;border-radius: 50%;float: left;overflow: hidden;">
-                    <!-- <img src="{{info.avatar}}" style="width: 40px;height: 40px;"> -->
-                    <img src="assets/img/guide3.jpg" style="width: 40px;height: 40px;">
+                <div style="width: 35px;height: 35px;border-radius: 50%;float: left;overflow: hidden;" (click)="goMe(info.id)">
+                    <img [src]="info.avatar" style="width: 40px;height: 40px;">
                 </div>
-                <span style="font-size: 13px;color: #9D9D9D;margin-left:10px;display: inline-block;margin-top: 8px;">{{info.username}}</span>
-                <span style="display: inline-block;width: 60px;height: 25px;border:1px solid #F7C2C2;border-radius: 3px;font-size: 13px;color: #F18D8D;text-align: center;line-height: 25px;float: right;margin-top: 5px;">+ 关注</span>
+                <span style="font-size: 13px;color: #9D9D9D;margin-left:10px;display: inline-block;margin-top: 8px;" (click)="goMe(info.id)">{{info.username}}</span>
+                <span style="display: inline-block;width: 60px;height: 25px;border:1px solid #F7C2C2;border-radius: 3px;font-size: 13px;color: #E99C9E;text-align: center;line-height: 25px;float: right;margin-top: 5px;" (click)="goAttention()" *ngIf="!isAttention">+ 关注</span>
+                <span style="display: inline-block;width: 60px;height: 25px;border:1px solid #E99C9E;border-radius: 3px;font-size: 13px;color: #Ffff;text-align: center;line-height: 25px;float: right;margin-top: 5px;background-color: #E99C9E;" *ngIf="isAttention" (click)="concelAttention()">已关注</span>
             </div>
             <div class='record-article'>
                 <p class='acticle-title'>{{info.content}}</p>
@@ -36,114 +44,15 @@
         </div>
         <detailComment type="diary" [id]="globalId" *ngIf="globalId"></detailComment>
         <div style="height: 55px;width: 100%;"></div>
-        <!-- <div class="acticle-reply">
-            <div *ngFor="let item of comment" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
-                <div class="reply-user">
-                    <div class="reply-head">
-                        <div class="reply-head-img">
-                            <img src="{{item.userImg}}" (click)="goMe(item.userId)">
-                        </div>
-                        <div class="reply-info">
-                            <div (click)="goMe(item.userId)">{{item.userName}}</div>
-                        </div>
-                    </div>
-                    <div>
-                        <span class="reply-text"><ion-icon ios="ios-chatbubbles-outline" md="ios-chatbubbles-outline">
-            </ion-icon>&nbsp;&nbsp;{{item.info}}</span>
-                    </div>
-                </div>
-                <div>
-                    <p (click)="commentDetail(item.id)">{{item.reply}}</p>
-                    <div class="mainimg">
-                        <div *ngFor="let img of item.plimg" class="imgdiv">
-                            <img [src]="img">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-                <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
-                </ion-infinite-scroll-content>
-            </ion-infinite-scroll>
-        </div> -->
-        <!-- <div class="article-wrp">
-            <div class="article-btn">
-                <button ion-button round color="ss-primary" (click)="makeComment()">
-                    <ion-icon ios="ios-create-outline" md="ios-create-outline"></ion-icon><span>说说我的想法</span>
-                </button>
-            </div>
-        </div> -->
-        <!-- <div class="acticle-reply" style="padding-bottom: 55px;">
-            <div *ngFor="let item of comment;index as i;" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
-                <div class="reply-user">
-                    <div class="reply-head">
-                        <div class="reply-head-img">
-                            <img src="{{item.userImg}}" (click)="goMe(item.userId)">
-                        </div>
-                        <div class="reply-info">
-                            <div (click)="goMe(item.userId)" class="name">{{item.userName}}</div>
-                            <p class="time">{{item.time}}</p>
-                        </div>
-                        <p class="friend">好友</p>
-                    </div>
-                </div>
-                <div style="position: relative;padding-left: 46px;">
-                    <p (click)="commentDetail(item.id)" class="replycontent">{{item.reply}}</p>
-                    <div class="commentWrap">
-                        <img src="assets/img/comment1.png" class="commentImg" (click)="addComment(i,item.id)">
-                        <img src="assets/img/zan.png" class="zanImg" (click)="commentZan(item.id)" *ngIf="!item.commentZan">
-                        <img src="assets/img/zan1.png" class="zanImg" *ngIf="item.commentZan">
-                        <span class="zanNum">{{item.zan}}</span>
-                    </div>
-                </div>
-                <div *ngFor="let addzan of item.addZan" style="margin-left:45px;padding-top:10px;border-top:1px solid rgb(236, 234, 234);">
-                    <div class="reply-user" style="margin-top: 5px;">
-                        <div class="reply-head">
-                            <div class="reply-head-img" style="width: 35px;height: 35px;">
-                                <img src="{{addzan.user.avatar}}" (click)="goMe(addzan.user.id)">
-                            </div>
-                            <div class="reply-info">
-                                <div (click)="goMe(addzan.user.id)" class="name">{{addzan.user.username}}</div>
-                                <p class="time">{{addzan.time}}</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="position: relative;">
-                        <p class="replycontent">{{addzan.content}}</p>
-                        <div class="commentWrap">
-                            <img src="assets/img/zan1.png" class="zanImg" *ngIf="addzan.commentZan">
-                            <img src="assets/img/zan.png" class="zanImg" *ngIf="!addzan.commentZan" (click)="addCommentZan(i,addzan.id)">
-                            <span class="zanNum">{{addzan.like_count}}</span>
-                        </div>
-                    </div>
-                </div>
-                <div style="margin-left:45px;border-top:1px solid rgb(236, 234, 234);" *ngIf="item.addZanAction">
-                    <div style="overflow: hidden;margin-top: 10px;">
-                        <div class="reply-head-img" style="width: 40px;height: 40px;float: left;">
-                            <img src="assets/img/guide1.jpg">
-                        </div>
-                        <ion-textarea placeholder="Enter a description" [(ngModel)]="item.addZanContent" style="border: 1px solid rgb(236, 234, 234);border-radius: 3px;float: right;width: 80%;"></ion-textarea>
-                    </div>
-                    <div style="overflow: hidden;">
-                        <p style="font-size: 14px;color: #fff;background-color:#EF7A7A;width: 40px;height: 25px;line-height: 25px;text-align: center;float: right;border-radius: 3px;" (click)="submitAddZan(i,item.id)">发布</p>
-                    </div>
-                </div>
-            </div>
-            <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-                <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
-                </ion-infinite-scroll-content>
-            </ion-infinite-scroll>
-        </div> -->
     </div>
     <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
-        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;"
-            (click)="makeComment()">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
             <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
             <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
         </div>
         <div style="float:right;width: 50%;display: inline-block;line-height: 30px;text-align: center;">
             <img src="assets/img/zan.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="!hasZan" (click)="like()">
-            <img src="assets/img/zan1.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="hasZan">
+            <img src="assets/img/zan1.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="hasZan" (click)="cancelLike()">
             <span style="font-size: 14px;color: #9F9F9F;vertical-align: middle;margin-left: 5px;">赞</span>
         </div>
     </div>
