--- a/src/pages/topic/longArticle/longArticle.html
+++ b/src/pages/topic/longArticle/longArticle.html
@@ -5,13 +5,13 @@
             <ion-row justify-content-between align-items-end>
                 <ion-col col-6>
                     <div>
-                        <img [src]="item.avatar" style="width: 35px;height: 35px;border-radius: 50%;overflow: hidden;vertical-align: middle;">
-                        <span style="font-size: 14px;color: #A3A3A3;margin-left: 10px;">{{item.username}}</span>
+                        <img [src]="item.avatar" style="width: 35px;height: 35px;border-radius: 50%;overflow: hidden;vertical-align: middle;" (click)="goMe(item.user_id)">
+                        <span style="font-size: 14px;color: #A3A3A3;margin-left: 10px;" (click)="goMe(item.user_id)">{{item.username}}</span>
                     </div>
                     <p style="font-size: 15px;color: #9C9C9C;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;
-                            -webkit-box-orient: vertical;margin: 0;margin-top: 10px;margin-bottom: 6px;">{{item.title}}</p>
+                            -webkit-box-orient: vertical;margin: 0;margin-top: 10px;margin-bottom: 6px;" (click)="goArticleDetail(item.object_id,item.title)">{{item.title}}</p>
                     <p style="font-size: 14px;color: #C1C1C1;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;
-                -webkit-box-orient: vertical;margin: 0;">正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文</p>
+                -webkit-box-orient: vertical;margin: 0;" (click)="goArticleDetail(item.object_id,item.title)">正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文</p>
                 </ion-col>
                 <ion-col col-4>
                     <img [src]="item.image_set[0]" style="width:100%;height: 80px;">
