--- a/src/pages/topic/topic.html
+++ b/src/pages/topic/topic.html
@@ -4,14 +4,15 @@
     </ion-navbar>
 </ion-header>
 <ion-content>
-    <div class="bannerWrap" [ngStyle]="{'background-image': 'url(assets/img/guide1.jpg)'}">
-        <span style="position: absolute;bottom: 10px;left: 10px;font-size: 22px;color: #fff;">#恋爱的犀牛</span>
-        <span style="display: inline-block;font-size: 14px;color: #fff;background: #EF7A7A;padding: 8px 18px;position: absolute;bottom: 10px;right: 10px;border-radius: 10px;">关注话题</span>
+    <div class="bannerWrap" [ngStyle]="{'background-image': 'url('+ topicInfo.cover + ')'}">
+        <span style="position: absolute;bottom: 10px;left: 10px;font-size: 22px;color: #fff;">#{{topicInfo.title}}</span>
+        <span style="display: inline-block;font-size: 14px;color: #EF7A7A;background: #fff;padding: 8px 18px;position: absolute;bottom: 10px;right: 10px;border-radius: 10px;border: 1px solid #EF7A7A;" *ngIf="!hasAttention" (click)="makeAttention()">关注话题</span>
+        <span style="display: inline-block;font-size: 14px;color: #fff;background: #EF7A7A;padding: 8px 18px;position: absolute;bottom: 10px;right: 10px;border-radius: 10px;" *ngIf="hasAttention" (click)="makeAttention()">已关注话题</span>
     </div>
     <ion-tabs tabsPlacement="top" mode="md">
-        <ion-tab [root]="topicBrief" [rootParams]="articleTitle" tabTitle="简介"></ion-tab>
-        <ion-tab [root]="longArticle" [rootParams]="articleTitle" tabTitle="长文"></ion-tab>
-        <ion-tab [root]="topicDiary" [rootParams]="articleTitle" tabTitle="日记"></ion-tab>
-        <ion-tab [root]="topicVideo" [rootParams]="articleTitle" tabTitle="视频"></ion-tab>
+        <ion-tab [root]="topicBrief" [rootParams]="topicParams" tabTitle="简介"></ion-tab>
+        <ion-tab [root]="longArticle" [rootParams]="topicParams" tabTitle="长文"></ion-tab>
+        <ion-tab [root]="topicDiary" [rootParams]="topicParams" tabTitle="日记"></ion-tab>
+        <ion-tab [root]="topicVideo" [rootParams]="topicParams" tabTitle="视频"></ion-tab>
     </ion-tabs>
 </ion-content>
