--- a/src/pages/topic/topicBrief/topicBrief.html
+++ b/src/pages/topic/topicBrief/topicBrief.html
@@ -15,7 +15,7 @@
         </div>
         <p style="font-size: 12px;color: #CDCDCD;margin: 0;margin-left: 16px;padding-bottom: 10px;">30篇相关文章，4350位用户关注了她</p>
     </div>
-    <p style="font-size: 14px;color: #999999;text-align: center;height: 28px;line-height: 28px;background: #fff;margin: 0;margin-top: 5px;">更多>></p>
+    <p style="font-size: 14px;color: #999999;text-align: center;height: 28px;line-height: 28px;background: #fff;margin: 0;margin-top: 5px;" (click)="goMore()">更多>></p>
     <p style="font-size: 13px;color: #BABABA;margin: 0;padding-left: 16px;margin-bottom: 10px;margin-top: 10px;">相关话题</p>
     <div style="padding-bottom: 20px;">
         <div style="padding-left: 16px;padding-right: 16px;border-bottom: 1px solid #F2F2F2;background: #fff;">
