--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -16,7 +16,7 @@
         <diary *ngIf="item.content_type == 'diary'" [diaryInfo]="item" from="me"></diary>
         <homevideo *ngIf="item.content_type == 'vlog'" [videoInfo]="item" from="me"></homevideo>
     </div>
-    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
 </ion-content>
