--- a/src/pages/activeuser/activeuser.html
+++ b/src/pages/activeuser/activeuser.html
@@ -10,9 +10,9 @@
                 <ion-row align-items-center justify-content-between style="height: 40px;">
                     <ion-col col-9>
                         <img [src]="item.avatar" style="width: 35px;height: 35px;border-radius: 50%;overflow: hidden;vertical-align: middle">
-                        <div style="display: inline-block;margin-left: 10px;vertical-align: middle;">
+                        <div style="display: inline-block;margin-left: 10px;vertical-align: middle;width: 80%;">
                             <p style="font-size: 14px;color: #ACACAC;" >{{item.nickname}}</p>
-                            <span style="font-size: 12px;color: #BCBCBC;">{{item.brief}}</span>
+                            <span style="font-size: 12px;color: #BCBCBC;display: block;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{{item.brief}}</span>
                         </div>
                     </ion-col>
                     <ion-col col-3>
