--- a/src/pages/diary/publish-diary.html
+++ b/src/pages/diary/publish-diary.html
@@ -76,8 +76,8 @@
                 <span style="color: #8B8B8B;font-size: 14px;float: float:left;">标签</span>
                 <img src="assets/img/arrowright.png" style="width: 7px;height: 13px;float: right;margin-top: 2px;">
             </div>
-            <div style="margin-top: 10px;">
-                <span style="font-size: 15x;color: #979797;display: inline-block;background: #D8D8D8;padding: 5px 10px;border-radius: 3px;margin-right: 5px;margin-bottom: 5px;" *ngFor="let item of diaryMark">{{diaryMark.name}}</span>
+            <div [ngStyle]="{'margin-top':diaryMark.length ? '10px' : '0' }">
+                <span style="font-size: 15x;color: #979797;display: inline-block;background: #D8D8D8;padding: 5px 10px;border-radius: 3px;margin-right: 5px;margin-bottom: 5px;" *ngFor="let item of diaryMark">{{item.name}}</span>
             </div>
         </div>
         <div style="border-bottom: 1px solid #dedede;margin-left: 16px;margin-right: 16px;padding-top: 10px;padding-bottom: 10px;margin-bottom: 30px;">
