--- a/src/pages/diary/publish-diary.html
+++ b/src/pages/diary/publish-diary.html
@@ -86,7 +86,7 @@
                 <img src="assets/img/arrowright.png" style="width: 7px;height: 13px;float: right;margin-top: 2px;">
             </div>
             <div style="margin-top: 10px;">
-                <span style="font-size: 15x;color: #DB999B;margin-right: 5px;margin-bottom: 5px;">#{{diaryArticle.title}}</span>
+                <span style="font-size: 15x;color: #DB999B;margin-top: 5px;margin-right: 5px;">{{diaryArticle.title}}</span>
 
             </div>
         </div>
